[gd_scene load_steps=28 format=2]

[ext_resource path="res://textures/cloud2.png" type="Texture" id=1]
[ext_resource path="res://Montserrat_24.tres" type="DynamicFont" id=2]
[ext_resource path="res://Montserrat-SemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://View/template.tscn" type="PackedScene" id=4]
[ext_resource path="res://Montserrat_32.tres" type="DynamicFont" id=5]
[ext_resource path="res://View/util/Characters/WWIcon.tscn" type="PackedScene" id=6]
[ext_resource path="res://Model/Labels/Confirm.tscn" type="PackedScene" id=7]
[ext_resource path="res://Starzy.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Control/randy_scripts/EditProfile.gd" type="Script" id=9]
[ext_resource path="res://Model/Labels/Cancel.tscn" type="PackedScene" id=10]
[ext_resource path="res://Model/Labels/Header.tscn" type="PackedScene" id=11]
[ext_resource path="res://View/util/Character.tscn" type="PackedScene" id=12]
[ext_resource path="res://Control/logic/DisplayCharacter.gd" type="Script" id=13]
[ext_resource path="res://View/util/Characters/MrIIcon.tscn" type="PackedScene" id=14]
[ext_resource path="res://View/util/Characters/RRIcon.tscn" type="PackedScene" id=15]
[ext_resource path="res://View/util/Characters/ZZIcon.tscn" type="PackedScene" id=16]
[ext_resource path="res://View/util/Characters/DDIcon.tscn" type="PackedScene" id=17]
[ext_resource path="res://View/util/CharacterIcon.tscn" type="PackedScene" id=18]
[ext_resource path="res://View/util/Characters/SSIcon.tscn" type="PackedScene" id=19]
[ext_resource path="res://View/util/Characters/CCIcon.tscn" type="PackedScene" id=20]
[ext_resource path="res://View/util/Characters/FFIcon.tscn" type="PackedScene" id=21]
[ext_resource path="res://View/util/Characters/HBIcon.tscn" type="PackedScene" id=22]
[ext_resource path="res://View/util/Characters/TTIcon.tscn" type="PackedScene" id=23]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 3 )

[node name="EditProfileScreen" instance=ExtResource( 4 )]
script = ExtResource( 9 )

[node name="MarginContainer" parent="TextureRect" index="0"]
anchor_top = 0.00166151
anchor_bottom = 1.00166
margin_top = 4.15393
margin_right = -172.0
margin_bottom = -162.844

[node name="ColorRect" parent="TextureRect/MarginContainer" index="0"]
margin_right = 1170.0
margin_bottom = 963.0

[node name="MarginContainer" parent="TextureRect/MarginContainer" index="1"]
margin_right = 1170.0
margin_bottom = 963.0

[node name="VBoxContainer" parent="TextureRect/MarginContainer/MarginContainer" index="0"]
margin_right = 820.0
margin_bottom = 763.0

[node name="HTTPRequest" type="HTTPRequest" parent="." index="3"]

[node name="Header" parent="." index="4" instance=ExtResource( 11 )]
margin_top = 20.0
custom_fonts/font = SubResource( 1 )
text = "EDIT PROFILE"

[node name="CharacterBackground" type="TextureRect" parent="." index="5"]
margin_left = 236.608
margin_top = 62.401
margin_right = 636.608
margin_bottom = 265.401
rect_scale = Vector2( 0.5, 0.7 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedCharacter" parent="." index="6" instance=ExtResource( 12 )]
position = Vector2( 341.767, 143.337 )
script = ExtResource( 13 )

[node name="ScrollContainer" type="ScrollContainer" parent="." index="7"]
margin_left = 263.0
margin_top = 206.0
margin_right = 851.0
margin_bottom = 477.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuOptions" type="VBoxContainer" parent="ScrollContainer" index="0"]
margin_right = 576.0
margin_bottom = 337.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ScrollContainer/MenuOptions" index="0"]
margin_right = 576.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_vertical = 3

[node name="CharacterSelectRow" type="HBoxContainer" parent="ScrollContainer/MenuOptions/ScrollContainer" index="0"]
margin_right = 576.0
margin_bottom = 75.0
rect_min_size = Vector2( 500, 75 )
size_flags_horizontal = 3
size_flags_vertical = 2
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodotIcon" parent="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow" index="0" instance=ExtResource( 18 )]
margin_left = 165.0
margin_right = 240.0

[node name="SSIcon" parent="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow" index="1" instance=ExtResource( 19 )]
visible = false
margin_left = 85.0
margin_right = 160.0

[node name="HBIcon" parent="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow" index="2" instance=ExtResource( 22 )]
visible = false
margin_left = 85.0
margin_right = 160.0

[node name="RRIcon" parent="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow" index="3" instance=ExtResource( 15 )]
visible = false
margin_left = 85.0
margin_right = 160.0

[node name="ZZIcon" parent="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow" index="4" instance=ExtResource( 16 )]
visible = false
margin_left = 104.0
margin_right = 179.0

[node name="CCIcon" parent="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow" index="5" instance=ExtResource( 20 )]
visible = false
margin_left = 147.0
margin_right = 222.0

[node name="DDIcon" parent="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow" index="6" instance=ExtResource( 17 )]
visible = false
margin_left = 189.0
margin_right = 264.0

[node name="FFIcon" parent="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow" index="7" instance=ExtResource( 21 )]
visible = false
margin_left = 232.0
margin_right = 307.0

[node name="MrIIcon" parent="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow" index="8" instance=ExtResource( 14 )]
visible = false
margin_left = 274.0
margin_right = 349.0

[node name="WWIcon" parent="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow" index="9" instance=ExtResource( 6 )]
margin_left = 250.0
margin_right = 325.0

[node name="TTIcon" parent="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow" index="10" instance=ExtResource( 23 )]
margin_left = 335.0
margin_right = 410.0

[node name="Account" type="Label" parent="ScrollContainer/MenuOptions" index="1"]
margin_top = 90.0
margin_right = 576.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 5 )
text = "Account: Student"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailRow" type="HBoxContainer" parent="ScrollContainer/MenuOptions" index="2"]
margin_top = 140.0
margin_right = 576.0
margin_bottom = 180.0

[node name="EmailLabel" type="Label" parent="ScrollContainer/MenuOptions/EmailRow" index="0"]
margin_right = 109.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 5 )
text = "Email: "

[node name="EmailEdit" type="LineEdit" parent="ScrollContainer/MenuOptions/EmailRow" index="1"]
margin_left = 113.0
margin_right = 576.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "Email address"

[node name="School" type="Label" parent="ScrollContainer/MenuOptions" index="3"]
margin_top = 190.0
margin_right = 576.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 5 )
text = "School: NTU"

[node name="ClassRow" type="HBoxContainer" parent="ScrollContainer/MenuOptions" index="4"]
margin_top = 240.0
margin_right = 576.0
margin_bottom = 286.0

[node name="Class" type="Label" parent="ScrollContainer/MenuOptions/ClassRow" index="0"]
margin_top = 3.0
margin_right = 100.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 5 )
text = "Class: "

[node name="OptionButton" type="OptionButton" parent="ScrollContainer/MenuOptions/ClassRow" index="1"]
margin_left = 104.0
margin_right = 185.0
margin_bottom = 46.0
theme = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "SS1"

[node name="FullnameRow" type="HBoxContainer" parent="ScrollContainer/MenuOptions" index="5"]
margin_top = 296.0
margin_right = 576.0
margin_bottom = 337.0

[node name="FullnameLabel" type="Label" parent="ScrollContainer/MenuOptions/FullnameRow" index="0"]
margin_right = 185.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 5 )
text = "Full Name: "

[node name="FullnameEdit" type="LineEdit" parent="ScrollContainer/MenuOptions/FullnameRow" index="1"]
margin_left = 189.0
margin_right = 576.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
align = 1
placeholder_text = "fullname"

[node name="ButtonsRow" type="HBoxContainer" parent="." index="8"]
margin_left = 263.803
margin_top = 497.161
margin_right = 1033.8
margin_bottom = 587.161
rect_scale = Vector2( 0.75, 0.75 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ConfirmButton" parent="ButtonsRow" index="0" instance=ExtResource( 7 )]
margin_top = 0.0
margin_right = 360.0
margin_bottom = 90.0
script = null

[node name="CancelButton" parent="ButtonsRow" index="1" instance=ExtResource( 10 )]
margin_left = 410.0
margin_top = 0.0
margin_right = 770.0
margin_bottom = 90.0
script = null

[node name="NicknameEdit" type="LineEdit" parent="." index="9"]
margin_left = 488.0
margin_top = 131.0
margin_right = 935.0
margin_bottom = 220.0
rect_scale = Vector2( 0.75, 0.75 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Nickname"
align = 1
expand_to_text_length = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow/GodotIcon" to="." method="_on_GodotIcon_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow/SSIcon" to="." method="_on_SSIcon_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow/HBIcon" to="." method="_on_HBIcon_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow/RRIcon" to="." method="_on_RRIcon_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow/ZZIcon" to="." method="_on_ZZIcon_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow/CCIcon" to="." method="_on_CCIcon_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow/DDIcon" to="." method="_on_DDIcon_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow/FFIcon" to="." method="_on_FFIcon_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow/MrIIcon" to="." method="_on_MrIIcon_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow/WWIcon" to="." method="_on_WWIcon_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuOptions/ScrollContainer/CharacterSelectRow/TTIcon" to="." method="_on_TTIcon_pressed"]
[connection signal="pressed" from="ButtonsRow/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="ButtonsRow/CancelButton" to="." method="_on_CancelButton_pressed"]
